fix space issue where clicking about me leads to nav bar covering title

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -69,6 +69,7 @@ html, body {
 }
 
 .title {
+    margin-top: 30px;
     width: 97%;
     background-color: #E8E8E8;
     padding: 10px;
@@ -90,7 +91,7 @@ html, body {
 }
 
 #contact {
-    margin-top: 450px;
+    margin-top: 400px;
 }
 
 #proj {
